# MyCPlusPlusProjects

./: README.md
VPN_drop_detection/: CMakeLists.txt
VPN_drop_detection/Resource/: Resource.aps  Resource.h  Resource.rc
VPN_drop_detection/Source/: VPN_drop_detection.cpp  VPN_drop_detection.h
